--- a/index.html
+++ b/index.html
@@ -23,69 +23,72 @@
 
   <body>
     <header class="header">
-      <div class="head-block">
-        <nav class="nav">
+      <div class="container">
+        <section class="head-flex">
           <a class="head-logo" href="index.html"
             ><span class="span-logo">Web</span>Studio</a
           >
-
-          <ul class="nav-ul">
-            <li class="nav-list-item">
-              <a href="index.html" class="activity nav-link">Студія</a>
+          <nav class="nav">
+            <ul class="nav-ul">
+              <li class="nav-list-item">
+                <a href="index.html " class="activity nav-link">Студія</a>
+              </li>
+              <li class="nav-list-item">
+                <a href="portfolio.html" class="nav-link">Портфоліо</a>
+              </li>
+              <li class="nav-list-item">
+                <a href="#contacts" class="nav-link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="head-contacts">
+            <li class="head-list-item-contacts">
+              <a class="head-contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="nav-list-item">
-              <a href="portfolio.html" class="nav-link">Портфоліо</a>
-            </li>
-            <li class="nav-list-item">
-              <a href="#contacts" class="nav-link">Контакти</a>
+            <li class="head-list-item-contacts">
+              <a class="head-contacts-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
-        </nav>
-        <ul class="head-contacts">
-          <li class="head-list-item-contacts">
-            <a
-              class="contacts-mail head-contacts-link"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="head-list-item-contacts">
-            <a class="contacts-tel head-contacts-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        </section>
       </div>
     </header>
     <main class="main">
-      <section class="main-head">
-        <h1 class="head-title">Ефективні рішення для вашого бізнесу</h1>
+      <div class="main-first-block">
+        <h1 class="head-title">
+          Ефективні рішення для<br />
+          вашого бізнесу
+        </h1>
         <button class="head-btn" type="button">Замовити послугу</button>
-      </section>
-      <section class="features">
-        <div class="features-block">
+      </div>
+
+      <section class="section">
+        <div class="container">
           <ul class="features-ul">
-            <li class="features-item-one features-list-item">
+            <li class="features-list-item">
               <h3 class="features-list-item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-list-item-discription">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="features-item-two features-list-item">
+            <li class="features-list-item">
               <h3 class="features-list-item-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-list-item-discription">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="features-item-tree features-list-item">
+            <li class="features-list-item">
               <h3 class="features-list-item-title">ПЛАНУВАННЯ</h3>
               <p class="features-list-item-discription">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="features-item-four features-list-item">
+            <li class="features-list-item">
               <h3 class="features-list-item-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-list-item-discription">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -95,13 +98,13 @@
           </ul>
         </div>
       </section>
-      <section class="occupation">
-        <div class="occupation-block">
+      <section class="section">
+        <div class="container">
           <h2 class="occupation-title">Чим ми займаємось</h2>
           <ul class="occupation-ul">
             <li class="occupation-list-item">
               <img
-                class="occupation-one-img"
+                class="occupation-img"
                 src="image/workspace2.jpg"
                 alt="workspace-image"
                 width="370"
@@ -113,7 +116,7 @@
               <img
                 src="image/workspace.jpg"
                 alt="workspace-image"
-                class="occupation-two-img"
+                class="occupation-img"
                 width="370"
                 height="294"
               />
@@ -122,7 +125,7 @@
               <img
                 src="image/workspace3.jpg"
                 alt="workspace-image"
-                class="occupation-tree-img"
+                class="occupation-img"
                 width="370"
                 height="294"
               />
@@ -130,69 +133,78 @@
           </ul>
         </div>
       </section>
-      <section id="portfolio" class="section-our-team">
-        <div class="block-our-team">
+      <section id="portfolio" class="section">
+        <div class="container">
           <h2 class="our-team-title">Наша команда</h2>
           <ul class="our-team-ul">
-            <li class="portfolio-list-item-one our-team-list-item">
-              <img
-                src="image/igor.jpg"
-                alt="person-foto"
-                class="person-foto"
-                width="270"
-                height="260"
-              />
+            <li class="our-team-list-item">
+              <a class="person-link" href="">
+                <img
+                  src="image/igor.jpg"
+                  alt="person-foto"
+                  class="person-foto"
+                  width="270"
+                  height="260"
+                />
 
-              <h3 class="person-title">Ігор Дем'яненко</h3>
-              <p class="person-discription">Product Designer</p>
+                <h3 class="person-title">Ігор Дем'яненко</h3>
+                <p class="person-discription">Product Designer</p>
+              </a>
             </li>
-            <li class="portfolio-list-item-two our-team-list-item">
-              <img
-                class="person-foto"
-                src="image/olga.jpg"
-                alt="person foto"
-                width="270"
-                height="260"
-              />
+            <li class="our-team-list-item">
+              <a class="person-link" href=""
+                ><img
+                  class="person-foto"
+                  src="image/olga.jpg"
+                  alt="person foto"
+                  width="270"
+                  height="260"
+                />
 
-              <h3 class="person-title">Ольга Рєпіна</h3>
-              <p class="person-discription">Frontend Developer</p>
-            </li>
-
-            <li class="portfolio-list-item-tree our-team-list-item">
-              <img
-                src="image/mykola.jpg"
-                alt="person foto"
-                class="person-foto"
-                width="270"
-                height="260"
-              />
-
-              <h3 class="person-title">Микола Тарасов</h3>
-              <p class="person-discription">Marketing</p>
+                <h3 class="person-title">Ольга Рєпіна</h3>
+                <p class="person-discription">Frontend Developer</p>
+              </a>
             </li>
 
-            <li class="portfolio-list-item-four our-team-list-item">
-              <img
-                src="image/mykhailo.jpg"
-                alt="person foto"
-                class="person-foto"
-                width="270"
-                height="260"
-              />
+            <li class="our-team-list-item">
+              <a class="person-link" href=""
+                ><img
+                  src="image/mykola.jpg"
+                  alt="person foto"
+                  class="person-foto"
+                  width="270"
+                  height="260"
+                />
 
-              <h3 class="person-title">Михайло Єрмаков</h3>
-              <p class="person-discription">UI Designer</p>
+                <h3 class="person-title">Микола Тарасов</h3>
+                <p class="person-discription">Marketing</p>
+              </a>
+            </li>
+
+            <li class="our-team-list-item">
+              <a class="person-link" href=""
+                ><img
+                  src="image/mykhailo.jpg"
+                  alt="person foto"
+                  class="person-foto"
+                  width="270"
+                  height="260"
+                />
+
+                <h3 class="person-title">Михайло Єрмаков</h3>
+                <p class="person-discription">UI Designer</p>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-block">
+      <div class="container">
         <a class="footer-logo" href="index.html"
           ><span class="span-logo">Web</span>Studio</a
         >
+
         <address class="footer-address">
           <ul class="footer-address-ul">
             <li class="address-list-item">
