--- a/index.html
+++ b/index.html
@@ -24,48 +24,47 @@
   <body>
     <header class="header">
       <div class="container">
-        <section class="head-flex">
-          <a class="head-logo" href="index.html"
-            ><span class="span-logo">Web</span>Studio</a
-          >
-          <nav class="nav">
-            <ul class="nav-ul">
-              <li class="nav-list-item">
-                <a href="index.html " class="activity nav-link">Студія</a>
-              </li>
-              <li class="nav-list-item">
-                <a href="portfolio.html" class="nav-link">Портфоліо</a>
-              </li>
-              <li class="nav-list-item">
-                <a href="#contacts" class="nav-link">Контакти</a>
-              </li>
-            </ul>
-          </nav>
-          <ul class="head-contacts">
-            <li class="head-list-item-contacts">
-              <a class="head-contacts-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+        <a class="head-logo" href="index.html"
+          ><span class="span-logo">Web</span>Studio</a
+        >
+        <nav class="nav">
+          <ul class="nav-ul">
+            <li class="nav-list-item">
+              <a href="index.html " class="activity nav-link">Студія</a>
             </li>
-            <li class="head-list-item-contacts">
-              <a class="head-contacts-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="nav-list-item">
+              <a href="portfolio.html" class="nav-link">Портфоліо</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="#contacts" class="nav-link">Контакти</a>
             </li>
           </ul>
-        </section>
+        </nav>
+        <ul class="head-contacts">
+          <li class="head-list-item-contacts">
+            <a class="head-contacts-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="head-list-item-contacts">
+            <a class="head-contacts-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <main class="main">
-      <div class="main-first-block">
-        <h1 class="head-title">
-          Ефективні рішення для<br />
-          вашого бізнесу
-        </h1>
-        <button class="head-btn" type="button">Замовити послугу</button>
-      </div>
-
-      <section class="section">
+      <section class="main-hero-section">
+        <div class="container">
+          <h1 class="head-title">
+            Ефективні рішення для<br />
+            вашого бізнесу
+          </h1>
+          <button class="head-btn" type="button">Замовити послугу</button>
+        </div>
+      </section>
+      <section class="features-section section">
         <div class="container">
           <ul class="features-ul">
             <li class="features-list-item">
@@ -138,62 +137,58 @@
           <h2 class="our-team-title">Наша команда</h2>
           <ul class="our-team-ul">
             <li class="our-team-list-item">
-              <a class="person-link" href="">
-                <img
-                  src="image/igor.jpg"
-                  alt="person-foto"
-                  class="person-foto"
-                  width="270"
-                  height="260"
-                />
-
+              <img
+                src="image/igor.jpg"
+                alt="person-foto"
+                class="person-foto"
+                width="270"
+                height="260"
+              />
+              <div>
                 <h3 class="person-title">Ігор Дем'яненко</h3>
                 <p class="person-discription">Product Designer</p>
-              </a>
+              </div>
             </li>
             <li class="our-team-list-item">
-              <a class="person-link" href=""
-                ><img
-                  class="person-foto"
-                  src="image/olga.jpg"
-                  alt="person foto"
-                  width="270"
-                  height="260"
-                />
-
+              <img
+                class="person-foto"
+                src="image/olga.jpg"
+                alt="person foto"
+                width="270"
+                height="260"
+              />
+              <div>
                 <h3 class="person-title">Ольга Рєпіна</h3>
                 <p class="person-discription">Frontend Developer</p>
-              </a>
+              </div>
             </li>
 
             <li class="our-team-list-item">
-              <a class="person-link" href=""
-                ><img
-                  src="image/mykola.jpg"
-                  alt="person foto"
-                  class="person-foto"
-                  width="270"
-                  height="260"
-                />
-
+              <img
+                src="image/mykola.jpg"
+                alt="person foto"
+                class="person-foto"
+                width="270"
+                height="260"
+              />
+              <div>
                 <h3 class="person-title">Микола Тарасов</h3>
                 <p class="person-discription">Marketing</p>
-              </a>
+              </div>
             </li>
 
             <li class="our-team-list-item">
-              <a class="person-link" href=""
-                ><img
-                  src="image/mykhailo.jpg"
-                  alt="person foto"
-                  class="person-foto"
-                  width="270"
-                  height="260"
-                />
-
+              <img
+                src="image/mykhailo.jpg"
+                alt="person foto"
+                class="person-foto"
+                width="270"
+                height="260"
+              />
+              <div>
                 <h3 class="person-title">Михайло Єрмаков</h3>
                 <p class="person-discription">UI Designer</p>
-              </a>
+              </div>
             </li>
           </ul>
         </div>
@@ -215,7 +210,6 @@
                 м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li class="contact-list-item"></li>
             <li class="contact-list-item">
               <a class="footer-link-mail" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
