--- a/portfolio.html
+++ b/portfolio.html
@@ -17,29 +17,29 @@
   <body>
     <header class="header">
       <div class="container">
-        <a class="head-logo" href="#"
+        <a class="head-logo" href="index.html"
           ><span class="span-logo">Web</span>Studio</a
         >
         <nav class="nav">
           <ul class="nav-ul">
             <li class="nav-list-item">
-              <a class="nav-link" href="index.html">Студія</a>
+              <a href="index.html " class="activity nav-link">Студія</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link activity" href="portfolio.html">Портфоліо</a>
+              <a href="portfolio.html" class="nav-link">Портфоліо</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="#contacts">Контакти</a>
+              <a href="#contacts" class="nav-link">Контакти</a>
             </li>
           </ul>
         </nav>
         <ul class="head-contacts">
-          <li class="contacts-li-email">
+          <li class="head-list-item-contacts">
             <a class="head-contacts-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="contacts-li-num">
+          <li class="head-list-item-contacts">
             <a class="head-contacts-link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
@@ -48,8 +48,9 @@
       </div>
     </header>
     <main class="main">
-      <div class="container">
-        <section class="section">
+
+        <section class="project-section section">
+                <div class="container">
           <ul class="ul-project-filter">
             <li class="filter-list-item">
               <button id="filter-btn-all" type="button">
@@ -188,11 +189,12 @@
               </a>
             </li>
           </ul>
+          </div>
         </section>
       </div>
     </main>
     <footer class="footer">
-      <div class="conteiner">
+      <div class="container">
         <a class="footer-logo" href="index.html"
           ><span class="span-logo">Web</span>Studio</a
         >
@@ -207,7 +209,6 @@
                 м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li class="contact-list-item"></li>
             <li class="contact-list-item">
               <a class="footer-link-mail" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
