--- a/index.html
+++ b/index.html
@@ -4,13 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -18,6 +11,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Web Studio</title>
   </head>
 
@@ -58,7 +58,7 @@
       <section class="main-hero-section">
         <div class="container">
           <h1 class="head-title">
-            Ефективні рішення для<br />
+            Ефективні рішення для
             вашого бізнесу
           </h1>
           <button class="head-btn" type="button">Замовити послугу</button>
@@ -97,7 +97,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="occupation-section section">
         <div class="container">
           <h2 class="occupation-title">Чим ми займаємось</h2>
           <ul class="occupation-ul">
@@ -132,7 +132,7 @@
           </ul>
         </div>
       </section>
-      <section id="portfolio" class="section">
+      <section id="portfolio" class="portfolio-section section">
         <div class="container">
           <h2 class="our-team-title">Наша команда</h2>
           <ul class="our-team-ul">
@@ -210,7 +210,7 @@
                 м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li class="contact-list-item">
+            <li id="contact-list-item" class="contact-list-item">
               <a class="footer-link-mail" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
